--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 DATABASE_CONNECTION_STRING="host=localhost port=5432 user=postgres password=postgres dbname=EventPlatform sslmode=disable"
+REDIS_ADDRESS="localhost:6379"
+REDIS_USERNAME=""
+REDIS_PASSWORD=""
+REDIS_DB=0
 APP_NAME="EventPlatform"
 APP_PORT=8080
