feat: implement caching with redis, beautify code style

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ REDIS_PASSWORD=""
 REDIS_DB=0
 APP_NAME="EventPlatform"
 APP_PORT=8080
+APP_ENV="development"
+EMAIL_SENDER="sevenfastfoodservice@gmail.com"
+EMAIL_PASSWORD="ectjtjmahkjfmouv"
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
