--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,10 @@ Thumbs.db
 # Windows-specific
 Thumbs.db
 desktop.ini
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
