docs: update README

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ REDIS_DB=0
 APP_NAME="EventPlatform"
 APP_PORT=8080
 APP_ENV="development"
-EMAIL_SENDER="sevenfastfoodservice@gmail.com"
-EMAIL_PASSWORD="ectjtjmahkjfmouv"
+EMAIL_SENDER=""
+EMAIL_PASSWORD=""
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
