feat: add tracer, bootstrap scripts

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -15,6 +15,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      jaeger:
+        condition: service_healthy
     env_file: .env
   db:
     image: postgres:16
@@ -41,6 +43,24 @@ services:
     restart: always
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "16686:16686" # Jaeger UI
+      - "4317:4317"
+      - "4318:4318"
+      - "14268:14268"
+      - "14269:14269"
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    volumes:
+      - ./data/jaeger:/tmp
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:14269/api/traces"]
       interval: 30s
       timeout: 10s
       retries: 3
